--- a/host/apps/PlatformInterfaceGenerator/CMakeLists.txt
+++ b/host/apps/PlatformInterfaceGenerator/CMakeLists.txt
@@ -3,9 +3,10 @@ project(PlatformInterfaceGenerator
     LANGUAGES CXX
 )
 
+set(PROJECT_WIN32_ICO resources/icons/app/on-logo.ico)
+set(PROJECT_MACOS_ICNS on-logo.icns)
 set(PROJECT_BUNDLE_ID com.onsemi.strata.pig)
 set(PROJECT_COPYRIGHT "Copyright (C) 2018-2020 ${PROJECT_COMPANY}")
-
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 find_package(Qt5 ${VERSION_QT5}
@@ -19,6 +20,18 @@ add_executable(${PROJECT_NAME} WIN32 MACOSX_BUNDLE
 
     qml.qrc
 )
+
+generate_app_version(GITTAG_PREFIX "pig_" MACBUNDLE ON)
+
+if(APPLE)
+    target_sources(${PROJECT_NAME} PRIVATE
+        resources/icons/app/on-logo.icns
+    )
+    set_source_files_properties(
+        resources/icons/app/on-logo.icns
+        PROPERTIES MACOSX_PACKAGE_LOCATION Resources
+    )
+endif()
 
 target_link_libraries(${PROJECT_NAME}
     PUBLIC Qt5::Core
@@ -35,6 +48,11 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
     AUTORCC ON
 
     OUTPUT_NAME "${PROJECT_DESCRIPTION}"
+)
+
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+    QT_DISABLE_DEPRECATED_BEFORE=0x060000
+    $<$<CONFIG:Debug>:QT_QML_DEBUG>
 )
 
 add_qml_import_path(PATH "${CMAKE_CURRENT_SOURCE_DIR}")
