--- a/host/apps/Flasher/CMakeLists.txt
+++ b/host/apps/Flasher/CMakeLists.txt
@@ -34,3 +34,8 @@ target_link_libraries(${PROJECT_NAME}
 set_target_properties(${PROJECT_NAME} PROPERTIES
     AUTOMOC ON
 )
+
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+    QT_DEPRECATED_WARNINGS
+    QT_DISABLE_DEPRECATED_BEFORE=0x051200
+)
