--- a/host/libs/loggers/QtLogger/src/CMakeLists.txt
+++ b/host/libs/loggers/QtLogger/src/CMakeLists.txt
@@ -22,3 +22,8 @@ target_link_libraries(${PROJECT_NAME}
 target_include_directories(${PROJECT_NAME} PUBLIC
     ${PROJECT_SOURCE_DIR}/include
 )
+
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+    QT_DEPRECATED_WARNINGS
+    QT_DISABLE_DEPRECATED_BEFORE=0x051200
+)
