--- a/host/apps/WidgetGallery/CMakeLists.txt
+++ b/host/apps/WidgetGallery/CMakeLists.txt
@@ -52,7 +52,8 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 )
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
-    QT_DISABLE_DEPRECATED_BEFORE=0x060000
+    QT_DEPRECATED_WARNINGS
+    QT_DISABLE_DEPRECATED_BEFORE=0x051200
     $<$<CONFIG:Debug>:QT_QML_DEBUG>
 )
 
