cmake: generate timestamp source code files without project name string
Don't generate long file names. No need to have project name as prefix
in file names/class names.

--- a/host/CMake/Templates/Timestamp.cpp.in
+++ b/host/CMake/Templates/Timestamp.cpp.in
@@ -1,11 +1,9 @@
-// WARNING! Generated file.
-// All changes made in this file will be lost!!
+// !! WARNING !!
+// Generated file. All changes made in this file will be lost!!
 
-#include "@PROJECT_NAME@Timestamp.h"
+#include "Timestamp.h"
 
 using namespace std::literals::string_view_literals;
 
-
 const std::string_view Timestamp::buildTimestamp{"@formattedTimestamp@"sv};
 const std::string_view Timestamp::buildOnHost{"@hostName@"sv};
-
