initial StrataComm commit

--- a/host/libs/CMakeLists.txt
+++ b/host/libs/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(loggers)
 add_subdirectory(Board)
 add_subdirectory(DownloadManager)
 add_subdirectory(Database)
+add_subdirectory(StrataComm)
 if(APPS_CORESW AND APPS_CORESW_HCS)
     add_subdirectory(EventsMgr)
 endif()
