--- a/host/libs/StrataComm/CMakeLists.txt
+++ b/host/libs/StrataComm/CMakeLists.txt
@@ -12,6 +12,8 @@ add_library(${PROJECT_NAME}
     src/StrataServer.cpp
     src/StrataClient.cpp
     src/Dispatcher.cpp
+    src/Client.cpp
+    src/ClientsController.cpp
     src/logging/LoggingQtCatagories.cpp
 )
 
