Couch chat demo: UI plus new features

--- a/host/research_spikes/couchbase-user-access/couchchat-server/conf/sync-gateway-config.json
+++ b/host/research_spikes/couchbase-user-access/couchchat-server/conf/sync-gateway-config.json
@@ -7,9 +7,9 @@
     }
   },
   "databases": {
-    "user-access-test": {
+    "couch-chat-server": {
       "server": "http://couchbase:8091",
-      "bucket": "user-access-test",
+      "bucket": "couch-chat-server",
       "username": "sync_gateway",
       "password": "sync_gateway",
       "enable_shared_bucket_access": true,
