--- a/host/libs/StrataComm/CMakeLists.txt
+++ b/host/libs/StrataComm/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library(strata::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
 target_link_libraries(${PROJECT_NAME}
