--- a/host/apps/PlatformRegistrationTool/CMakeLists.txt
+++ b/host/apps/PlatformRegistrationTool/CMakeLists.txt
@@ -64,6 +64,7 @@ target_link_libraries(${PROJECT_NAME}
     Qt5::Qml
     Qt5::Quick
 
+    strata::DeviceOperations
     strata::BoardManager
     strata::FlasherConnector
     strata::DownloadManager
