--- a/host/resources/qtifw/config/config.xml.in
+++ b/host/resources/qtifw/config/config.xml.in
@@ -19,4 +19,11 @@
     <InstallActionColumnVisible>true</InstallActionColumnVisible>
     <DisableAuthorizationFallback>true</DisableAuthorizationFallback>
     <ControlScript>installscript.qs</ControlScript>
+    <RemoteRepositories>
+        <Repository>
+            <Url>http://10.238.54.227/s3com?fl=ota/@CMAKE_SYSTEM_NAME_LOWER@/modules/strata</Url>
+            <Enabled>@STRATA_OTA_REPOSITORY_ENABLED@</Enabled>
+            <DisplayName>Strata Repository</DisplayName>
+        </Repository>
+    </RemoteRepositories>
 </Installer>
