WIP: added ClientConnector. needs more imporvments

--- a/host/libs/StrataComm/CMakeLists.txt
+++ b/host/libs/StrataComm/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(${PROJECT_NAME}
     src/Client.cpp
     src/ClientsController.cpp
     src/ServerConnector.cpp
+    src/ClientConnector.cpp
     src/logging/LoggingQtCategories.cpp
 )
 
