Couchbase user contents browser, fixes to chat app and sync function

--- a/host/research_spikes/couchbase-user-access/couchchat-server/conf/sync-gateway-config-chatroom-app.json
+++ b/host/research_spikes/couchbase-user-access/couchchat-server/conf/sync-gateway-config-chatroom-app.json
@@ -41,27 +41,24 @@
           // Access safety: only allow access from list of valid channels
           // Data routing: translate external channel name into internal channel name, and vice-versa
           switch(doc.StrataExternalChannelID) {
+
             // Chatroom 1
             case "chatroom_1":
-              channel("chatroom_1");
-              channel("internal_ID_chatroom_1");
-              break;
             case "internal_ID_chatroom_1":
               channel("chatroom_1");
               channel("internal_ID_chatroom_1");
               break;
+
             // Chatroom 2
             case "chatroom_2":
-              channel("chatroom_2");
-              channel("internal_ID_chatroom_2");
-              break;
             case "internal_ID_chatroom_2":
               channel("chatroom_2");
               channel("internal_ID_chatroom_2");
               break;
+
             // Invalid external channel ID
             default:
-              throw({forbidden: "Invalid external channel ID!"})
+              throw({forbidden: "Invalid external channel ID: " + doc.StrataExternalChannelID})
           }
         }
       `
