--- a/host/research_spikes/couchbase-user-access/couchchat-server/conf/sync-gateway-config-platform-list.json
+++ b/host/research_spikes/couchbase-user-access/couchchat-server/conf/sync-gateway-config-platform-list.json
@@ -28,7 +28,9 @@
       "sync":
       `
         function (doc, oldDoc) {
-
+          if(doc.channels_available) {
+            channel(doc.channels_available)
+          }
         }
       `
     }
