started working on StrataClient

--- a/host/libs/StrataComm/CMakeLists.txt
+++ b/host/libs/StrataComm/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(${PROJECT_NAME}
     src/ClientConnector.cpp
     src/logging/LoggingQtCategories.cpp
     include/StrataServer.h
+    include/StrataClient.h
 )
 
 add_library(strata::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
