CS-1223: added tests for StrataClient

--- a/host/libs/StrataComm/test/CMakeLists.txt
+++ b/host/libs/StrataComm/test/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(${PROJECT_NAME}-test
     ClientsControllerTest.cpp
     QzmqTest.cpp
     StrataServerTest.cpp
+    StrataClientTest.cpp
     main.cpp
 )
 
