CS-1223: added tests for RequestController

--- a/host/libs/StrataComm/test/CMakeLists.txt
+++ b/host/libs/StrataComm/test/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(${PROJECT_NAME}-test
     QzmqTest.cpp
     StrataServerTest.cpp
     StrataClientTest.cpp
+    RequestsControllerTest.cpp
     main.cpp
 )
 
