Modify user access map to be rooted on channels, add channel search

--- a/host/research_spikes/couchbase-user-access/couchchat-server/conf/sync-gateway-config-platform-list.json
+++ b/host/research_spikes/couchbase-user-access/couchchat-server/conf/sync-gateway-config-platform-list.json
@@ -28,8 +28,14 @@
       "sync":
       `
         function (doc, oldDoc) {
-          if(doc.channels_available) {
+          if (doc._id == "user_access_map") {
+            channel("user_access_map")
+            return
+          }
+
+          if (doc.channels_available) {
             channel(doc.channels_available)
+            return
           }
         }
       `
