use module names from Updates.xml when uploading to DP

--- a/host/components/qt/CMakeLists.txt
+++ b/host/components/qt/CMakeLists.txt
@@ -1,6 +1,6 @@
 if (CMAKE_BUILD_TYPE STREQUAL "OTA")
     project(Qt
-        DESCRIPTION "Qt5 framework"
+        DESCRIPTION "Qt5 Framework"
         LANGUAGES NONE
     )
 
