CommonCpp: new SGJsonFormatter class for formatting json strings without converting it to objects
Moved json format methods from SGUtilsCpp into SGJsonFormatter
Moved scanner logic from SGJsonSyntaxHighlighter into SGJsonFormatter

--- a/host/components/commoncpp/SGJsonSyntaxHighlighter/CMakeLists.txt
+++ b/host/components/commoncpp/SGJsonSyntaxHighlighter/CMakeLists.txt
@@ -8,7 +8,9 @@ find_package(Qt5 ${VERSION_QT5}
 )
 
 add_library(${PROJECT_NAME}
+    src/SGJsonFormatter.cpp
     src/SGJsonSyntaxHighlighter.cpp
+    include/SGJsonFormatter.h
     include/SGJsonSyntaxHighlighter.h
 )
 
