SCI: scrolling speed improvement
Wrap mode change to WordWrap.
Messages are expanded by default.
Condensed button is disabled when json is not valid.
Removed buggy feature where following is turned on/off automatically when user scrolls.

--- a/host/apps/SerialConsoleInterface/CMakeLists.txt
+++ b/host/apps/SerialConsoleInterface/CMakeLists.txt
@@ -53,6 +53,7 @@ target_link_libraries(${PROJECT_NAME}
     strata::CouchbaseLiteCPP
     strata::QtLogger
     strata::SGUtilsCpp
+    strata::SGJsonSyntaxHighlighter
 )
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
