building libzmq from source code

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 	path = extern/couchbase-lite-C
 	url = https://github.com/couchbaselabs/couchbase-lite-C.git
 	ignore = all
+[submodule "extern/libzmq"]
+	path = extern/libzmq
+	url = https://github.com/zeromq/libzmq.git
