--- a/host/libs/connector/CMakeLists.txt
+++ b/host/libs/connector/CMakeLists.txt
@@ -3,10 +3,8 @@ project(connector
     LANGUAGES CXX
 )
 
-find_package(ZeroMQ REQUIRED)
+find_package(ZMQHelper REQUIRED)
 find_package(Threads REQUIRED)
-
-set(EXT_LIBS_PATH ${CMAKE_SOURCE_DIR}/ext_libs)
 
 add_library(${PROJECT_NAME}
     src/Connector.cpp
@@ -22,16 +20,15 @@ add_library(strata::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 target_link_libraries(${PROJECT_NAME}
       PUBLIC ${SERIALPORT_LIBRARIES}
-      PUBLIC ${ZEROMQ_LIBRARIES}
       rapidjson::rapidjson
       Threads::Threads
+      zeromq::libzmq
+      ZMQHelper
 )
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC include
     PUBLIC ${SERIALPORT_INCLUDE_DIR}
-    PUBLIC ${EXT_LIBS_PATH}/zmq/include
-    PUBLIC ${ZEROMQ_INCLUDE_DIR}
     PUBLIC ${RAPIDJSON_INCLUDE_DIR}
 )
 
