Research second path has begun

--- a/host/extern/CMakeLists.txt
+++ b/host/extern/CMakeLists.txt
@@ -95,7 +95,24 @@ set_target_properties(spdlog::spdlog PROPERTIES
     INTERFACE_INCLUDE_DIRECTORIES "${EXTERN_INSTALL_DIR_PATH}/spdlog-${GIT_HASH}/include"
 )
 add_dependencies(spdlog::spdlog DEPENDS spdlog)
+#
+# monaco-editor
+#
+file(GLOB_RECURSE INSTALLED ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}/package/package.json)
+if(NOT INSTALLED)
+set(MONACO_TAG 0.20.0)
+set (monaco-editor-source "https://registry.npmjs.org/monaco-editor/-/monaco-editor-${MONACO_TAG}.tgz")
+set (monaco-editor-sum 5d5009343a550124426cb4d965a4d27a348b4dea)
+set (monaco-editor-archive "${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/monaco-editor.tgz")
 
+
+file(DOWNLOAD "${monaco-editor-source}" "${monaco-editor-archive}"
+    EXPECTED_HASH SHA1=${monaco-editor-sum}
+)
+execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzf ${SOURCE_DIR_EXTERN}/monaco-editor-${MONACO_TAG}/tar/monaco-editor.tgz
+WORKING_DIRECTORY ${EXTERN_INSTALL_DIR_PATH}/monaco-editor-${MONACO_TAG}
+)
+endif() 
 
 #
 # pdf.js
